# Computing_architecture

./: README.md
Задание_1/: Readme.txt  Пояснительная записка.docx
Задание_1/Исходные тексты программы/Project_1/: CMakeLists.txt  container.c  container.h  functional.c  functional.h  main.c  object_oriented.c  object_oriented.h  procedural.c  procedural.h  programming_language.c  programming_language.h  random.c  random.h
Задание_1/Результаты тестовых прогонов/: Test1_Output.txt  Test2_Output.txt  Test3_Output.txt  Test7_Output.txt
Задание_1/Тестовые наботы/: Test1_Input.txt
Задание_1/Тесты/My_tests/: Test2_Input.txt  Test4_command.txt
Задание_2/: Readme.txt  Пояснительная_записка_2.docx
Задание_2/Project_2/: container.cpp  container.h  programming_language.h  random.h
Задание_2/Исходные тексты программы/Project_2/: CMakeLists.txt  functional.cpp  functional.h  main.cpp  object_oriented.cpp  object_oriented.h  procedural.cpp  procedural.h  programming_language.cpp
Задание_2/Тестовые наборы/: Test3_command.txt  Test5_command.txt
Задание_3/: Readme.txt  Пояснительная_записка_3.docx
Задание_3/Исходные_тексты_программы/Project3/: container.py  extender.py  functional.py  main.py  object_oriented.py  procedural.py  programming_language.py  read_arguments.py
Задание_3/Результаты_текстовых_прогонов/: Test2_Output.txt
Задание_3/Результаты_тестовых_прогонов/: Test1_Output.txt  Test4_Output.txt
Задание_3/Тестовые_наборы/: Test2_Input.txt  Test3_command.txt  Test4_command.txt  Test5_command.txt  Test6_command.txt
Задание_5/: Пояснительная_записка_5.docx
(+3 files in other folders)
