cmake_minimum_required(VERSION 3.20)
project(Project_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_2 main.cpp container.cpp container.h functional.cpp functional.h object_oriented.cpp object_oriented.h procedural.cpp procedural.h programming_language.cpp programming_language.h random.h random.h)
